--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p><b>Course:</b> Bachelor of Science in Information Technology</p>
             <button class="styled-button"><a href="#about-me">About Me</a></button>
         </div>
-        <img src="/image/self.png" alt="formal image of Alijiah" height="500">
+        <img src="image/self.png" alt="formal image of Alijiah" height="500">
     </div>
 
     <div class="about-me" id="about-me">
@@ -38,8 +38,8 @@
                 <br>On the right is some of my family pics :></p>
         </div>
         <div class="image-container">
-            <img src="/image/family1.jpg" alt="family picture of Alijiah" height="100">
-            <img src="/image/family2.jpg" alt="family picture of Alijiah" height="100">
+            <img src="image/family1.jpg" alt="family picture of Alijiah" height="100">
+            <img src="image/family2.jpg" alt="family picture of Alijiah" height="100">
         </div>
     </div>
     <section id="education">
